# hosts

./: .gitignore  .gitmodules  CMakeLists.txt  LibpigaHostsConfig.cmake.in  README.md  build_from_jenkins.sh  host.h  host_defines.h  host_defines.h.in
arduino/: Arduino-LED-Button-Diagram.sch  CMakeLists.txt  LibhostsArduinoConfig.cmake.in  README.md
arduino/arduino_onboard/: Makefile  arduino.ino  button.cpp  button.h  led.cpp  led.h  readme.md  serial_connector.cpp  serial_connector.h  serial_protocol.h
arduino/arduino_onboard/in/: InMain.ino  Makefile
arduino/include/: Player.hpp  PlayerManager.hpp  arduino.hpp  buttons.hpp  main.hpp  outputs.hpp
arduino/src/: Player.cpp  PlayerManager.cpp  arduino.cpp  buttons.cpp  executable.cpp  main.cpp  outputs.cpp
pc_keyboard/: README.md
pc_keyboard/src/: host.cpp
raspberrypi_gpio/: README.md
raspberrypi_gpio/src/: host.cpp
